--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
               <h4>Main Pages</h4>
               <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
+                <li><a href="./about.html">About Me</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#portfolio-details">Portfolio Details</a></li>
