--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
           </div>
           <div class="project">
-            <img src="./images/Project 2.png" alt="" />
+            <img src="./images/project2.png" alt="" />
             <div class="project-title-description">
               <h3>Brandly</h3>
               <p>
