--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 agency. Created to showcase their work, team, and design
                 philosophy.
               </p>
-            </div>
+            </div>new 
           </div>
           <div class="project">
             <img src="./images/project2.png" alt="" />
